# lumen

./: .env.example  .gitignore  .gitleaks.toml  .npmrc  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  biome.json  commitlint.config.js  docker-compose.yml  drizzle.config.ts  lefthook.yml  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: AUTH_LAZY_INIT.md  BUILD_LOG.md  LUMEN_VISION.md  PRE_LAUNCH.md  shortcuts.md
docs/adr/: 000-template.md  001-meta-framework-sveltekit.md  002-database-neon-postgres.md  003-orm-drizzle.md  004-authentication-better-auth.md  005-validation-valibot.md  006-dynamic-pricing-from-database.md  007-ui-primitives-bits-ui.md  008-desktop-tauri-2.md  009-package-manager-pnpm.md  010-lint-format-biome.md  README.md
docs/handoffs/: 2026-04-24-phase-0-handoff.md  CLAUDE_CODE_PROMPT.md
docs/runbooks/: database-migrations.md  database-seeding.md  desktop-release.md  local-dev.md  stripe-testing.md
drizzle/: 0000_initial_schema.sql  0001_auth_plugin_tables.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
scripts/seed/: guard.ts  (+5 more)
src/: app.d.ts  app.html  hooks.server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  quick_capture.rs  sync.rs  tray.rs
(+111 files in other folders)
