[package]
name = "lumen"
version = "1.1.0"
description = "Lumen — your second brain, lit. (Tauri 2 desktop shell)"
authors = ["Billy Ribeiro <welberribeirodrums@gmail.com>"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "lumen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
anyhow = "1"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
